testing chats and messages repo